[project]
name = "tinyllm"
version = "0.1.0"
description = ""
authors = [
    {name = "pyoneerC",email = "maxcomperatutti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "onnxruntime (>=1.20.1,<2.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "transformers (>=4.48.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
